flex/flex-tests/testData/js2_highlighting/AssignmentToConst.js2
namespace ns = "";
use namespace ns;
class SelectionInfo {
  private const moveSpeed:Number = 1;
  ns const moveSpeed2:Number = 1;

  function SelectionInfo(o:Object, x:Boolean, y:Number) {
      this.<error descr="Attempt to assign to const or readonly variable">moveSpeed</error> = 1;
      this.<error descr="Attempt to assign to const or readonly variable">moveSpeed2</error> = 1;
  }
}